Testing/TestCache/test97.txt
Error trace on line: 3, column: 5 in file "test97".
inl w = {from=1; by=2}, {from=1; by=2},{from=1; by=3}
    ^
Error trace on line: 4, column: 1 in file "test97".
init ({from=1; near_to=5},3,10) (inl a b c -> a*b*c) .view_span w
^
Error trace on line: 5, column: 1 in file "test97".
|> show.all
^
Error trace on line: 78, column: 28 in file "HostTensor".
inl show' {cutoff_near_to} tns = 
                           ^
Error trace on line: 80, column: 9 in file "HostTensor".
    inl strb_type = fs [text: "System.Text.StringBuilder"]
        ^
Error trace on line: 81, column: 9 in file "HostTensor".
    inl s = FS.Constructor strb_type ()
        ^
Error trace on line: 85, column: 9 in file "HostTensor".
    inl blank = dyn ""
        ^
Error trace on line: 116, column: 5 in file "HostTensor".
    loop {tns; ind=0; cutoff=0} |> ignore
    ^
Error trace on line: 86, column: 18 in file "HostTensor".
    inl rec loop {tns ind cutoff} =
                 ^
Error trace on line: 87, column: 9 in file "HostTensor".
        match tns.dim with
        ^
Error trace on line: 260, column: 16 in file "HostTensor".
    inl dim' = tns.dim
               ^
Invalid use of apply. type (type_lit (all)) and type (type_lit (dim))
